# otowi

./: .gitignore  README.md  TODO  update_from_wine.sh
include/: config.h  dlgs.h  imm.h  mcx.h  mmsystem.h  nb30.h  port.h  rpc.h  shellapi.h  winbase.h  wincrypt.h  wingdi.h  winnt.h  winscard.h  winsock.h  winsvc.h
include.otowi/: config.h  config.h.my  dlgs.h  imm.h  mcx.h  mmsystem.h  nb30.h  port.h  rpc.h  shellapi.h  winbase.h  wincrypt.h  wingdi.h  winnt.h  winscard.h  winsock.h  winsvc.h
include.otowi/wine/: server.h  test.h
include/wine/: server.h  test.h
src/: CMakeLists.txt
src/kernel32/: console.c  file.c  file.c.old  format_msg.c  heap.c  kernel_private.h  locale.c  process.c  sync.c  thread.c  version.c  virtual.c
src/kernel32.otowi/: environ.c  except.c  locale.c  module.c  path.c  port.c
src/ntdll/: critsection.c  directory.c  env.c  file.c  heap.c  nt.c  ntdll_misc.h  om.c  process.c  resource.c  rtl.c  sync.c  time.c  virtual.c  virtual.c.no
src/ntdll.otowi/: ntdll_misc.h  path.c  port.c  server.c  thread.c
src/port.otowi/: file.c  kernel_private.h  locale.c  locale.c.no  ntdll.c  path.c  port.c  thread.c
test/: Makefile  openfile.c
test/dlopen/: Makefile  test.c
test/t1/: Makefile  main.c
tests/ntdll/: Makefile
